feat: Production-ready release with 3D visualization, optimized model, and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ htmlcov/
 runs/
 logs/
 tensorboard_logs/
+test_logs/
+
+# Generated test data
+src/frontend/test-data.js
+*.tfevents.*
 
 # Frontend
 node_modules/
